# os2025spring

./: .gitignore  CMakeLists.txt
inc/: queue.h  stack.h
src/fifo/: main.c
src/lru/: main.c
src/malloc/: main.c
src/queue/: queue.c
src/stack/: stack.c
